--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Underdog&display=swap');
+
+*{
+    margin: 0px;
+    border: none;
+    padding: 0px;
+}
+
+body{
+    overflow: scroll;
+    font-family: "Roboto", serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+}
